# sgr-test

./: README.md  pyproject.toml
docs/: design.md
src/text2sql_agent/: __init__.py  app.py  config.py
src/text2sql_agent/services/: categories.py  metadata.py  reasoning.py
src/text2sql_agent/utils/: __init__.py  cache.py
